--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="app">
-      <form name="entrada" onsubmit="validateForm(event)W">
+      <form name="entrada" onsubmit="validateForm(event)">
         Cidade: <input type="text" name="cidade" id="cidade" /><br />
         Estado: <input type="text" name="estado" id="estado" /><br /><br />
 
