--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="submit" value="Consultar" />
       </form>
       <!-- aqui vai a table dentro do data -->
-      <div id="data"></div>
+      <div id="data" style="margin:50px"></div>
     </div>
   </body>
 </html>
