--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="app">
       <form name="entrada" onsubmit="validateForm(event)">
-        Cidade: <input type="text" name="cidade" id="cidade" /><br />
-        Estado: <input type="text" name="estado" id="estado" /><br /><br />
+        Cidade (sem acento): <input type="text" name="cidade" id="cidade" /><br />
+        Estado (sigla): <input type="text" name="estado" id="estado" /><br /><br />
 
         <input type="submit" value="Consultar" />
       </form>
