got city-code from callback

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <form name="entrada" onsubmit="validateForm(event)">
         Cidade (sem acento): <input type="text" name="cidade" id="cidade" /><br />
         Estado (sigla): <input type="text" name="estado" id="estado" /><br /><br />
+        <input type="hidden" id="codigo"/>
 
         <input type="submit" value="Consultar" />
       </form>
